--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start --tunnel",
+    "mock": "json-server --watch db.json --host 0.0.0.0 --port 3333",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
