--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "hackaton-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "start": "expo start --tunnel",
     "mock": "json-server --watch db.json --host 0.0.0.0 --port 3333",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "coverage:open": "node -e \"const cp=require('child_process');const p='coverage/lcov-report/index.html'; if(process.platform==='win32'){cp.exec(`start \\\"\\\" ${p.replaceAll('/', '\\\\')}`)} else if(process.platform==='darwin'){cp.exec(`open ${p}`)} else {cp.exec(`xdg-open ${p}`)}\"",
+    "coverage:missing": "node scripts/coverage-missing.mjs"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -34,12 +36,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "29.x",
     "@types/react": "~19.0.10",
-    "jest": "^29.2.1",
+    "jest": "^29.7.0",
     "jest-expo": "~53.0.9",
     "json-server": "^1.0.0-beta.3",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
-  },
-  "private": true
+  }
 }
